# keln

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
.windsurf/rules/: check-the-spec.md
docs/: keln-ai-author-reference.md  keln-grammar-v0.9.ebnf
samples/: day1.keln  fibonacci.keln  fizzbuzz.keln  fizzbuzz2.keln  parallel_sum.kbc  parallel_sum.keln  parallel_word_count.kbc  parallel_word_count.keln  port_parser.keln  safe_math.keln  traffic_light.keln  word_count.keln
samples/advent_of_code/day_1/: solve.py
samples/advent_of_code/day_10a/: solve.keln  test2.txt  test5.txt
samples/advent_of_code/day_11a/: solve.kbc
samples/advent_of_code/day_12/: solve.kbc  solve.keln
samples/advent_of_code/day_1a/: puzzle.txt
samples/advent_of_code/day_2/: solve.keln
samples/advent_of_code/day_3a/: solve.keln
spec/: keln-effects-formal-v0.9.md  keln-forall-sampling-v0.9.md  keln-grammar-v0.9.ebnf  keln-language-gaps-addendum.md  keln-phase4-addendum.md  keln-phase4-spec-r4.md  keln-refinements-v0.9.md  keln-registry-spec-v0.1.md  keln-spec-v0.9.md
src/: ast.rs  lib.rs  main.rs
src/eval/: env.rs  eval.rs  fingerprint.rs  integration_tests.rs  interpreter.rs  mod.rs  stdlib.rs  tests.rs
src/lexer/: comment_matcher.rs  identifier_matcher.rs  mod.rs  string_matcher.rs  symbol_matcher.rs  tokens.rs
src/mcp/: mod.rs  tools.rs  value_json.rs
src/parser/: error.rs  mod.rs
src/types/: check.rs  env.rs  mod.rs  tests.rs
src/verify/: mod.rs  result.rs  sample.rs  tests.rs
src/vm/: codec.rs  exec.rs  ir.rs  lower.rs  mod.rs  tests.rs
(+55 files in other folders)
